[package]
name = "tug_of_orb"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
# Causes miscompilation when counting colors in grid. Idk what that's about.
# opt-level = 3

[profile.release]
panic = "abort"
lto = true

[dependencies]
gba = "0.11.1"
log = {version = "0.4.17", features = ["max_level_debug", "release_max_level_off"]}
mgba_log = {path = "mgba_log"}
