[package]
name = "tug_of_orb"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
lto = true

[dependencies]
gba = "0.13.2"
log = {version = "0.4.17", features = ["max_level_debug", "release_max_level_off"]}
mgba_log = "0.2.1"
nocash_gba_log = "0.1.0"
