[package]
name = "tug_of_orb"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[dependencies]
deranged = {version = "0.3.11", default-features = false}
log = {version = "0.4.17", default-features = false, features = ["max_level_debug", "release_max_level_off"]}
mgba_log = "0.2.1"
nocash_gba_log = "0.1.0"
rand = {version = "0.8.5", default-features = false}
rand_core = "0.6.4"

[dev-dependencies]
gba_test = {version = "0.3.1", features = ["log"]}
